K8S/order-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
  namespace: purely-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
        - name: order-service
          image: mohamedelrefy20/order-service:latest
          ports:
            - containerPort: 9070
---
apiVersion: v1
kind: Service
metadata:
  name: order-service
  namespace: purely-app
spec:
  selector:
    app: order-service
  ports:
    - protocol: TCP
      port: 9070
      targetPort: 9070
  type: ClusterIP
