K8S/product-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
  namespace: purely-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
        - name: product-service
          image: mohamedelrefy20/tproduct-service:latest
          ports:
            - containerPort: 9010
---
apiVersion: v1
kind: Service
metadata:
  name: product-service
  namespace: purely-app
spec:
  selector:
    app: product-service
  ports:
    - protocol: TCP
      port: 9010
      targetPort: 9010
  type: ClusterIP
