K8S/purely_order_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: purely-order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: purely-order-service
  template:
    metadata:
      labels:
        app: purely-order-service
    spec:
      containers:
        - name: mongo
          image: mongo:4.4
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: purely-order-service-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: purely-order-service
spec:
  selector:
    app: purely-order-service
  ports:
    - port: 27017
      targetPort: 27017
