K8S/purely_product_service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: purely-product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: purely-product-service
  template:
    metadata:
      labels:
        app: purely-product-service
    spec:
      containers:
        - name: mongo
          image: mongo:4.4
          ports:
            - containerPort: 27017
          volumeMounts:
            - mountPath: /data/db
              name: mongo-data
            - mountPath: /docker-entrypoint-initdb.d/
              name: init-scripts
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: purely-product-service-pvc
        - name: init-scripts
          hostPath:
            path: /home/mohamed/Desktop/Fullstack-E-commerce-web-application-main/K8S/purely_product_service
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: purely-product-service
spec:
  selector:
    app: purely-product-service
  ports:
    - port: 27017
      targetPort: 27017
